# Mjolnir

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  devenv.nix  flake.nix  fly.toml  mjolnir.nix  pom.xml
.github/workflows/: ci-tests-linux.yml  ci-tests-nix.yml  ci-tests.yml  deploy-to-fly.yml
src/: main.rs
src/main/java/com/github/shymega/apps/chat/mjolnir/: Application.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/: IncomingMessage.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/discord/: DiscordBotConfiguration.java  DiscordProfile.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/discord/listeners/: DiscordBotEventListener.java  DiscordBotMessageCreateEventListener.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/irc/: IrcBotConfiguration.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/irc/listeners/: IrcBotEventListener.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/matrix/: MatrixBotConfiguration.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/matrix/listeners/: MatrixBotListener.java
src/main/java/com/github/shymega/apps/chat/mjolnir/adapters/telegram/: TelegramBotConfiguration.java
src/main/java/com/github/shymega/apps/chat/mjolnir/observer/api/: EventSender.java  ObserverDispatch.java
src/main/java/com/github/shymega/apps/chat/mjolnir/observer/events/: AdapterMessageReceivedEvent.java  BaseEvent.java
src/test/java/com/github/shymega/apps/chat/mjolnir/: ApplicationTests.java
(+1 files in other folders)
