[package]
name = "mjolnir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
irc = "1.0.0"
log = "0.4.21"
matrix-sdk = "0.7.1"
ollama-rs = "0.1.7"
serenity = "0.12.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
tokio = { version = "1.36.0", features = ["full"] }
